--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@ body {font-size:16px;}
     <h3 class="w3-padding-64"><b>The IT World<br>Duong Anh Kiet</b></h3>
   </div>
   <div class="w3-bar-block">
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Team Profile</a>
-    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Project Ideas</a>
-    <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Feedback</a>
-    <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">IT Technology</a>
-    <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">IT Work</a>
+    <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Team Profile</a>
+    <a href="project.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Project Idea</a>
+    <a href="feedback.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Feedback</a>
+    <a href="ittech.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">IT Technology</a>
+    <a href="itwork.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">IT Work</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Tools</a>
   </div>
 </nav>
@@ -32,7 +32,7 @@ body {font-size:16px;}
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
   <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-  <span>Company Name</span>
+  <span>The IT World</span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -44,41 +44,39 @@ body {font-size:16px;}
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="showcase">
     <h1 class="w3-jumbo"><b>Team Profile</b></h1>
-    <p class=MsoNormal style='text-align:justify;line-height:150%'>I always
-prioritize member cooperation in order to form an effective and harmonious
-working group. As a result, I decided on &quot;Amigos&quot; as the group name
-because it means &quot;friends&quot; in Spanish. It embodies the spirit of the
-entire team, which is constantly assisting one another in order to progress
-together.<o:p></o:p></p>
+      <p style='text-align:justify'> I always
+        prioritize member cooperation in order to form an effective and harmonious
+        working group. As a result, I decided on &quot;Amigos&quot; as the group name
+        because it means &quot;friends&quot; in Spanish. It embodies the spirit of the
+        entire team, which is constantly assisting one another in order to progress
+        together.</p>
   </div>
 
   <!-- Test Summary -->
   <div class="w3-container" id="services" style="margin-top:60px">
     <h1 class="w3-xxxlarge w3-text-red"><b>My personality test summary</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
+      <p class=MsoListParagraphCxSpFirst style='margin-top:0in;margin-right:0in;
+      margin-bottom:0in;margin-left:.5in;margin-bottom:.0001pt;mso-add-space:auto;
+      text-align:justify;text-indent:-.25in;line-height:150%;mso-list:l0 level1 lfo1'><![if !supportLists]><span
+      style='font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:
+      Symbol'><span style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      </span></span></span><![endif]>Personality test: Logistician <o:p></o:p></p>
 
+      <p class=MsoListParagraphCxSpMiddle style='margin-top:0in;margin-right:0in;
+      margin-bottom:0in;margin-left:.5in;margin-bottom:.0001pt;mso-add-space:auto;
+      text-align:justify;text-indent:-.25in;line-height:150%;mso-list:l0 level1 lfo1'><![if !supportLists]><span
+      style='font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:
+      Symbol'><span style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      </span></span></span><![endif]>Learning style test: Auditory and Visual<o:p></o:p></p>
 
-<p class=MsoListParagraphCxSpFirst style='margin-top:0in;margin-right:0in;
-margin-bottom:0in;margin-left:.5in;margin-bottom:.0001pt;mso-add-space:auto;
-text-align:justify;text-indent:-.25in;line-height:150%;mso-list:l0 level1 lfo1'><![if !supportLists]><span
-style='font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:
-Symbol'><span style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Personality test: Logistician <o:p></o:p></p>
-
-<p class=MsoListParagraphCxSpMiddle style='margin-top:0in;margin-right:0in;
-margin-bottom:0in;margin-left:.5in;margin-bottom:.0001pt;mso-add-space:auto;
-text-align:justify;text-indent:-.25in;line-height:150%;mso-list:l0 level1 lfo1'><![if !supportLists]><span
-style='font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:
-Symbol'><span style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Learning style test: Auditory and Visual<o:p></o:p></p>
-
-<p class=MsoListParagraphCxSpLast style='margin-top:0in;margin-right:0in;
-margin-bottom:0in;margin-left:.5in;margin-bottom:.0001pt;mso-add-space:auto;
-text-align:justify;text-indent:-.25in;line-height:150%;mso-list:l0 level1 lfo1'><![if !supportLists]><span
-style='font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:
-Symbol'><span style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Creativity test: Openness, Conscientiousness and
-Extraversion<o:p></o:p></p>
+      <p class=MsoListParagraphCxSpLast style='margin-top:0in;margin-right:0in;
+      margin-bottom:0in;margin-left:.5in;margin-bottom:.0001pt;mso-add-space:auto;
+      text-align:justify;text-indent:-.25in;line-height:150%;mso-list:l0 level1 lfo1'><![if !supportLists]><span
+      style='font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:
+      Symbol'><span style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      </span></span></span><![endif]>Creativity test: Openness, Conscientiousness and
+      Extraversion<o:p></o:p></p>
   </div>
 
 
@@ -86,41 +84,41 @@ Extraversion<o:p></o:p></p>
   <div class="w3-container" id="services" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Teammates</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-	<p><b>Team leader</b>:</p>
-<p class=MsoNormal style='margin:0in;margin-bottom:.0001pt;text-align:justify;
-line-height:150%'>Based on my test results and self-reflection, I could be a
-person who works hard and gets the job done satisfactorily. However, I have
-come to realize that my inflexible working style sometimes prevents me from
-having the wisdom to make the right decisions in difficult situations. As a
-result, I am hoping to find a leader who can help me overcome my weaknesses. The
-leader is in charge of developing a project plan, assign tasks to other team
-members, and provide regular updates. This person is also responsible for engaging
-the team members, which is a crucial factor affecting the team's effectiveness.
-Because the top priority is group cooperation, I am hoping for an insightful
-and inspiring leader. In practice, this person is able to provide a clear
-vision of what team members can and should do to improve themselves as well as
-improve working efficiency. He or she may have a positive influence on others
-by&nbsp;mesmerizing&nbsp;their listeners with their speech&nbsp;and
-inspiring&nbsp;others to do the right thing. As a result, this leader will help
-the team maximize its potential and guide the further development of the group.<o:p></o:p></p>
+	   <p><b>Team leader</b>:</p>
+     <p class=MsoNormal style='margin:0in;margin-bottom:.0001pt;text-align:justify;
+      line-height:150%'>Based on my test results and self-reflection, I could be a
+      person who works hard and gets the job done satisfactorily. However, I have
+      come to realize that my inflexible working style sometimes prevents me from
+      having the wisdom to make the right decisions in difficult situations. As a
+      result, I am hoping to find a leader who can help me overcome my weaknesses. The
+      leader is in charge of developing a project plan, assign tasks to other team
+      members, and provide regular updates. This person is also responsible for engaging
+      the team members, which is a crucial factor affecting the team's effectiveness.
+      Because the top priority is group cooperation, I am hoping for an insightful
+      and inspiring leader. In practice, this person is able to provide a clear
+      vision of what team members can and should do to improve themselves as well as
+      improve working efficiency. He or she may have a positive influence on others
+      by&nbsp;mesmerizing&nbsp;their listeners with their speech&nbsp;and
+      inspiring&nbsp;others to do the right thing. As a result, this leader will help
+      the team maximize its potential and guide the further development of the group.<o:p></o:p></p>
 
-	<p><b>Team members:</b>:</p>
+	    <p><b>Team members:</b></p>
 
-<p class=MsoNormal style='margin:0in;margin-bottom:.0001pt;text-align:justify;
-line-height:150%'>Besides a reliable leader, any project's heart and soul rests
-with its team members. In addition to being familiar with some basic programming
-languages such as Python, Java and C and their relevant programming skills, I
-am looking forward to find teammates with soft skills such as problem-solving
-skills and interpersonal skills, particularly the ability to collaborate
-effectively with others. These are who contribute to overall project objectives
-and complete individual deliverables responsibly. According to the personality
-test, I might be a practical and perceptive person, who tends to think
-logically and be open-minded to other viewpoints. My communication skills, on
-the other hand, need to <span class=GramE>be improved</span> because I
-sometimes have trouble expressing myself clearly. Therefore, truthfulness and
-assertiveness are among the values I look for my teammates. In particular, they
-can speak up when something strikes them as unjust or wrong and keep the
-processes can run smoothly.<o:p></o:p></p>
+      <p class=MsoNormal style='margin:0in;margin-bottom:.0001pt;text-align:justify;
+      line-height:150%'>Besides a reliable leader, any project's heart and soul rests
+      with its team members. In addition to being familiar with some basic programming
+      languages such as Python, Java and C and their relevant programming skills, I
+      am looking forward to find teammates with soft skills such as problem-solving
+      skills and interpersonal skills, particularly the ability to collaborate
+      effectively with others. These are who contribute to overall project objectives
+      and complete individual deliverables responsibly. According to the personality
+      test, I might be a practical and perceptive person, who tends to think
+      logically and be open-minded to other viewpoints. My communication skills, on
+      the other hand, need to be improved because I
+      sometimes have trouble expressing myself clearly. Therefore, truthfulness and
+      assertiveness are among the values I look for my teammates. In particular, they
+      can speak up when something strikes them as unjust or wrong and keep the
+      processes can run smoothly.</p>
   </div>
 
 
