--- a/ittech.html
+++ b/ittech.html
@@ -255,6 +255,8 @@ body {font-size:16px;}
 
     <h1 class="w3-xxlarge w3-text-red">State of the art of Cloud computing service</h1>
     <p style="text-align:justify">In general, the structure of cloud computing service can be commonly divided into 3 layer: software layer, platform layer and infrastructure layer.</p>
+    <img src="C:\Users\KietDuong\DuongAnhKiet\images\CloudService.png" width="100%">
+
     <p><b>Software as a service (SaaS):</b></p>
       <p style="text-align:justify">“Software as a service (SaaS) replaces the traditional on-device software with software that is licensed on a subscription basis. It is centrally hosted in the cloud.” (The Top 3 Cloud Computing Service Models, 2021) [6]. To be more specific, as a result of the SaaS, consumers can use applications that are hosted on a cloud infrastructure. It is possible to access the applications from a wide range of client devices, and the user is not in control of the cloud infrastructure. Cloud applications can take advantage of the automatic feature to achieve higher performance, accessibility, and reduced costs, which make cloud apps more convenient than the traditional ones. In addition, SaaS also provides customers a pay-as-you-go approach that means customers just pay for what they needs. This allows users to measure their application services as needed. In fact, we have already been using many SaaS approaches today without realization. Most SaaS apps, such as Facebook, YouTube, email, and Google apps, can be accessed immediately via a web browser, without the need to download or install them.</p>
     <p><b>Platform as a service (PaaS): </b></p>
