--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+.header {
+  background-image: url('https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/teamprofilebg.png');
+  padding: 100px;
+  color: white;
+  font-size: 80px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 </style>
 <body>
 
@@ -49,18 +57,18 @@ img {
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-  <div class="w3-container" style="margin-top:80px">
-    <h1 class="w3-jumbo"><b>Team Profile</b></h1>
-      <p style='text-align:justify'> I always
-        prioritize member cooperation in order to form an effective and harmonious
-        working group. As a result, I decided on &quot;Amigos&quot; as the group name
-        because it means &quot;friends&quot; in Spanish. It embodies the spirit of the
-        entire team, which is constantly assisting one another in order to progress
-        together.</p>
+  <div class="header" style="margin-top:50px">
+    <h1 class="w3-jumbo" s><b>Team Profile</b></h1>
       </div>
 
   <!-- Test Summary -->
-  <div class="w3-container" style="text-align:justify">
+  <div class="w3-container" style="text-align:justify;margin-top:60px">
+    <p style='text-align:justify'> I always
+      prioritize member cooperation in order to form an effective and harmonious
+      working group. As a result, I decided on &quot;Amigos&quot; as the group name
+      because it means &quot;friends&quot; in Spanish. It embodies the spirit of the
+      entire team, which is constantly assisting one another in order to progress
+      together.</p>
     <h1 class="w3-xxxlarge w3-text-red"><b>My personality test summary</b></h1>
     <hr style="border:5px solid red" class="w3-round">
     <ul>
