--- a/ittech.html
+++ b/ittech.html
@@ -17,6 +17,14 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+.header {
+  background-image: url('https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/ittechbg.png');
+  padding: 100px;
+  color: white;
+  font-size: 30px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 </style>
 <body>
 
@@ -49,19 +57,20 @@ img {
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-  <div class="w3-container" style="margin-top:80px">
+  <div class="header" style="margin-top:50px">
     <h1 class="w3-jumbo"><b>IT Technology</b></h1>
+
+  </div>
+
+  <!-- Afitificial Intelligence -->
+  <div class="w3-container" style="margin-top:60px">
+    <div style="text-align:justify">
       <p  >The IT world&nbsp;is experiencing a number
       of remarkable developments, some of which may fade into obscurity, but some of
       which are likely to have a profound impact on how we live our lives. Artificial
       Intelligence (AI) and Cloud Computing are two of the most important ones we
       need to consider. In addition, these technologies are both relevant to my
       project. </p>
-  </div>
-
-  <!-- Afitificial Intelligence -->
-  <div class="w3-container" style="margin-top:60px">
-    <div style="text-align:justify">
       <h1 class="w3-xxxlarge w3-text-red"><b>ARTIFICIAL INTELLIGENCE</b></h1>
       <hr style="border:5px solid red" class="w3-round">
 
