--- a/feedback.html
+++ b/feedback.html
@@ -18,7 +18,8 @@ img {
   margin-right: auto;
 }
 .header {
-  background-image: url('https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/teamprofilebg.png');
+  background-image: url('https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/feedback
+  bg.png');
   padding: 100px;
   color: white;
   font-size: 80px;
