--- a/tools.html
+++ b/tools.html
@@ -58,6 +58,7 @@ img {
 
   <!-- Header -->
   <div class="header" style="margin-top:50px">
+    <h1 class="w3-jumbo" s><b>Tools</b></h1>
       </div>
 
   <!-- Tools section -->
