--- a/tools.html
+++ b/tools.html
@@ -19,9 +19,7 @@ img {
 }
 .header {
   background-image: url('https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/toolsbg.png');
-  padding: 100px;
-  color: white;
-  font-size: 80px;
+  padding: 150px;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -57,12 +55,13 @@ img {
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-  <div class="header" style="margin-top:50px">
-    <h1 class="w3-jumbo" s><b>Tools</b></h1>
-      </div>
+<div class="header" style="margin-top:50px">
+</div>
 
   <!-- Tools section -->
   <div class="w3-container" style="text-align:justify;margin-top:60px">
+    <h1 class="w3-xxxlarge w3-text-red"><b>Tools</b></h1>
+    <hr style="border:5px solid red" class="w3-round">
     <p>My webpage link: <a href="https://kietduonganh.github.io/DuongAnhKiet/"><b>https://kietduonganh.github.io/DuongAnhKiet/</b></a></p>
     <p>My GitHub repository link: <a href="https://github.com/KietDuongAnh/DuongAnhKiet/tree/main"><b>https://github.com/KietDuongAnh/DuongAnhKiet/tree/main</b></a></p>
     <p>Overall, Git and GitHub are the two applications that I use throughout my work on assignment 2. While GitHub serves as an easily accessible data repository, Git allows me to easily track and manage that data using a simple yet effective syntax.</p>
