--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body,h1,h2,h3,h4,h5 {
   font-family: "Poppins", sans-serif
@@ -22,22 +23,47 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.sidebar {
+  height: 100%;
+  width: 300px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: red;
+  overflow-x: hidden;
+  padding-top: 10px;
+}
+
+/* Style sidebar links */
+.sidebar a {
+  padding: 5px 16px 30px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
+  display: block;
+}
+
+/* Style links on mouse-over */
+.sidebar a:hover {
+  color: black;
+}
 </style>
 <body>
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
-  <div class="w3-container">
-    <h3 class="w3-padding-64"><b>The IT World<br>Duong Anh Kiet</b></h3>
-  </div>
-  <div class="w3-bar-block">
-    <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Team Profile</a>
-    <a href="tools.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Tools</a>
-    <a href="project.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Project Idea</a>
-    <a href="feedback.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Feedback</a>
-    <a href="ittech.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">IT Technology</a>
-    <a href="itwork.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">IT Work</a>
+<nav class="w3-sidebar w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:200px;font-weight:bold;" id="mySidebar">
+  <div class="sidebar">
+    <div style="text-align:center">
+      <p style="font-size: 40px; color: white">The IT World </p>
+      <p style="font-size: 25px; color: white"> Duong Anh Kiet</p>
+    </div>
+      <a href="index.html" ><i class="fa fa-fw fa-users w3-xxxlarge"></i> Team Profile</a>
+      <a href="tools.html"><i class="fa fa-fw fa-wrench w3-xxxlarge"></i> Tools</a>
+      <a href="project.html"><i class="fa fa-fw fa-lightbulb-o w3-xxxlarge"></i> Project Idea</a>
+      <a href="feedback.html"><i class="fa fa-fw fa-pencil-square-o w3-xxxlarge"></i> Feedback</a>
+      <a href="ittech.html"><i class="fa fa-fw fa-cogs w3-xxxlarge"></i> IT Technology</a>
+      <a href="itwork.html"><i class="fa fa-fw fa-briefcase w3-xxxlarge"></i> IT work</a>
   </div>
 </nav>
 
@@ -54,7 +80,7 @@ img {
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-  <div class="header" style="margin-top:50px">
+  <div class="header" style="margin-top:40px">
     <h1 class="w3-jumbo"><b>Project Idea</b></h1>
   </div>
 
@@ -78,18 +104,18 @@ img {
         <!-- photos -->
         <img src="https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/AppFeature1.png" alt="feature" style="width:60%">
         <img src="https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/AppFeature2.png" alt="feature" style="width:60%">
-        <p>Source: Todoist</p>
+        <p style="text-align:center">Source: Todoist</p>
 
 
         <li><b>Task priority:</b> My product would include a task prioritization feature to help users prevent wasting valuable resources on less important tasks. Users can mark their goals with different priority levels to avoid situations in which some minor tasks consume too much attention while relevant or really important goals go unachieved. The application will then automatically arrange them at the top of the list in descending order based on the level that the user selects. Additionally, users can set reminders to remind them of the tasks that have been labeled and are coming up to help them stay on schedule.</li>
         <!-- photos -->
         <img src="https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/AppFeature3.png" alt="feature" style="width:60%">
-        <p>Source: nTask </p>
+        <p style="text-align:center">Source: nTask </p>
 
         <li><b>Reporting:</b> This is another feature that users see tangible progress of their goals. As part of task management, users would need to keep track of and observe the progress of your their activities. In terms of avoiding missing deadlines and make tasks progress more efficiently, it is necessary to control the flow of tasks. In particular, as a result of visual graphs and specific data, users would be updated on their working progress on a daily or weekly basis, see their productivity trends and stay on target to accomplish their goals. Besides, users are able to access the activity history. Specifically, this application would provide users with a task completed archive in case they want to verify if their initial plan was flawed. When users review their process, they can see how small steps can contribute up to big results.</li>
         <!-- photos -->
         <img src="https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/AppFeature4.png" alt="feature" style="width:60%">
-        <p>Source: Todoist</p>
+        <p style="text-align:center">Source: Todoist</p>
 
         <li><b>Achievement sharing:</b>	When all of the tasks for a goal have been completed, the system will record the completed goal as a new achievement and save it to the user's account, which they can share with other users. This feature can be used for a variety of purposes. Members of a project team, for example, can share achievements to track their progress, or users can simply show off their accomplishments to friends and motivate them to work harder toward their goals</li>
       </ul>
