--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ img {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: red;
+  background-color: #DC143C;
   overflow-x: hidden;
   padding-top: 10px;
 }
