--- a/tools.html
+++ b/tools.html
@@ -31,7 +31,7 @@ img {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: red;
+  background-color: #DC143C;
   overflow-x: hidden;
   padding-top: 10px;
 }
