--- a/ittech.html
+++ b/ittech.html
@@ -12,6 +12,7 @@ body,h1,h2,h3,h4,h5 {
 }
 body {
   font-size:16px;
+  background-color: #FFF0F5;
 }
 img {
   display: block;
@@ -103,14 +104,14 @@ img {
         <p>“Artificial intelligence (AI) refers to the simulation of human
           intelligence in machines that are programmed to think like humans and mimic
           their actions. The term may also be applied to any machine that exhibits
-          traits associated with a human mind such as learning and problem-solving.”
-          (How Artificial Intelligence Works, 2021) In short, as abroad field of
+          traits associated with a human mind such as learning and problem-solving”
+          (How Artificial Intelligence Works, 2021). In short, as abroad field of
           computer science, artificial intelligence (AI) aims to give machines
           the capabilities to accomplish tasks that normally require human
           intellectual capacity</p>
 
       <h1 class="w3-xxlarge w3-text-red">State of the art of AI</h1>
-      <p><b>Machine learning:</b></p>
+      <p><b>Machine learning (ML):</b></p>
         <p >Machine learning is a subset of artificial intelligence that
             uses analytic techniques to give machines the ability to handle data without
             specific instructions. It is possible for systems, in particular, to learn from
@@ -125,7 +126,7 @@ img {
             perform more sophisticated calculations on big data
             and run faster than ever before. For example, we can see its application in Netflix"s
             online suggestion promotions or self-driving car supported by Google.</p>
-        <p><b>Deep learning:</b></p>
+        <p><b>Deep learning (DL):</b></p>
           <p >“Deep learning takes inspiration from the activity of neurons within the
           brain to learn how to recognize complex patterns through learned data.
           This is thanks to the use of algorithms, mainly statistical calculations.
@@ -350,7 +351,7 @@ img {
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
+<div class=" w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
 
 <script>
 // Script to open and close sidebar
