--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ body,h1,h2,h3,h4,h5 {
 }
 body {
   font-size:16px;
+  background-color: #FFF0F5;
 }
 img {
   display: block;
@@ -19,7 +20,7 @@ img {
   margin-right: auto;
 }
 .header {
-  background-image: url('https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/teamprofilebg.png');
+  background-image: url("https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/teamprofilebg.png");
   padding: 100px;
   color: white;
   font-size: 80px;
@@ -77,7 +78,7 @@ img {
   <div class="sidebar">
     <div style="text-align:center">
       <p style="font-size: 40px; color: white">The IT World </p>
-      <p style="font-size: 25px; color: white"> Duong Anh Kiet</p>
+      <p style="font-size: 25px; color: white">Duong Anh Kiet</p>
     </div>
       <a href="index.html" ><i class="fa fa-fw fa-users w3-xxxlarge"></i> Team Profile</a>
       <a href="tools.html"><i class="fa fa-fw fa-wrench w3-xxxlarge"></i> Tools</a>
@@ -98,13 +99,16 @@ img {
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
+
+
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:340px;margin-right:40px">
+<div class="w3-main" style="margin-left:340px;margin-right:40px;">
 
   <!-- Header -->
   <div class="header" style="margin-top:40px">
     <h1 class="w3-jumbo" s><b>Team Profile</b></h1>
       </div>
+
 
   <!-- Test Summary -->
   <div class="w3-container" style="text-align:justify;margin-top:60px">
@@ -171,7 +175,7 @@ img {
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
+<div class=" w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
 
 <script>
 // Script to open and close sidebar
