--- a/itwork.html
+++ b/itwork.html
@@ -12,6 +12,7 @@ body,h1,h2,h3,h4,h5 {
 }
 body {
   font-size:16px;
+  background-color: #FFF0F5;
 }
 img {
   display: block;
@@ -112,7 +113,7 @@ img {
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
+<div class=" w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
 
 <script>
 // Script to open and close sidebar
