--- a/itwork.html
+++ b/itwork.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?</b>family=Poppins">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body,h1,h2,h3,h4,h5 {
@@ -92,6 +92,7 @@ img {
   <div class="w3-container" style="text-align:justify;margin-top:60px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Interview summary</b></h1>
     <hr style="border:5px solid red" class="w3-round">
+    <p>We were fortunate to have the opportunity to interview Mr. Tam, a software developer who is currently working on a project team for a Vietnamese technology company. His company mainly develops IT healthcare services and distributes medical equipment. His firm's existing partner is GE Healthcare, a company based in the United States that supplies medical equipment and IT healthcare systems. The team is currently working on a storage and communication system project for healthcare in Vietnam. This application's clients are primarily hospitals and clinics across the country. His daily tasks include coding in order to build and develop software, as well as communicating with a large number of people, including his team members, project sponsors, and customers. Tam stated that he spends the majority of his time coding. Because of the effects of Covid-19, he must work from home. Every day at 8:30 a.m., he calls the group. They will confer in order to decide on the division of labor for each member. He will present a brief report on work progress to the project manager at the end of the day. He also sometimes has meetings with partners and investors to deliver his team project ideas. Tam indicated that his job presents some difficulties. First, working in the medical field necessitates a high level of data accuracy as well as responsibility. He must strike a reasonable balance between technical assurance and accuracy. Furthermore, despite a high salary and many company benefits, working as a software developer is a highly competitive job due to its constant development. That necessitates him working and studying more in order to continuously develop himself.</p>
   </div>
 
   <!-- Discussion -->
@@ -104,7 +105,28 @@ img {
   <div class="w3-container" style="text-align:justify;margin-top:60px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Interview question</b></h1>
     <hr style="border:5px solid red" class="w3-round">
-
+    <p>
+      <b>Question 1. Could you please introduce your name?</b></b> <br>
+      Answer: “My name is Duong Huu Tam” <br>
+      <b>Question 2. What part of the IT industry do you work in?</b></b><br>
+      Answer: “I am working for a technology company distributing medical equipment and providing IT healthcare systems in Vietnam.” <br>
+      <b>Question 3. Could you please tell us about your IT work?</b> <br>
+      Answer: “I am in charge of software developer position in project team of my company. Actually, my main tasks is doing coding to build and develop software.” <br>
+      <b>Question 4. Could also you tell me about your current or recent projects?</b> <br>
+      Answer: “I also take responsibility for gather ideas from my teammates and design further plan for my team after discussing with my project manager. Currently, my company is cooperate with GE Healthcare, American company specializing in the production of medical equipment and healthcare IT systems. We are working on a project that create a storage and communication systems for hospital in Vietnam. ” <br>
+      <b>Question 5. Who are the various people with whom you interact at work?</b> <br>
+      Answer: “Actually, I have to work with many kind of people including other members in my team project, my company business partner, and also my clients. But most of time is spending for working with my team.” <br>
+      <b>Question 6. Could you please share any interactions you've had with other IT professionals?</b> <br>
+      Answer: “Most of my teammates is Vietnamese, so it is an advantage for communication in my team. We often arrange time to have meetings and discuss with each other about the project and other IT-related aspects.” <br>
+      <b>Question 7. How about your interactions with customers or investors?</b> <br>
+      Answer: “Actually, my job doesn't focus much on direct contact with customers. However, I also have indirect ways to interact with them such as doing surveys to find out the needs of users. Occasionally, my team also has the opportunity to meet with partners and present the idea of the project to convince and call for new investors.” <br>
+      <b>Question 8. Which aspects of your job do you devote the most time to?</b> <br>
+      Answer: “I usually spend a lot of time coding and developing software. My work starts at 8:30 a.m. every day with a meeting with team members and discussion and division of work. Because of the Covid-19 impact, I have to work at home. At the end of the day, I will submit a report to the team leader and present the work progress to plan for the next time.” <br>
+      <b>Question 9. Which aspects of your job do you find the most difficult?</b> <br>
+      Answer: “My job is a highly competitive even though it offers salary and other benefits. This job requires a certain amount of specialized knowledge, meticulousness and high precision. Also, as you know, the world of IT is on a constant development momentum and is estimated to explode even more in the future. Along with that development, there are indispensable challenges. In order to keep up with the times, I always have to learn constantly to develop myself in addition to improving my work.” <br>
+      <b>Question 10. Finally, could you provide an example of your work that best constitute the core of the IT sector?</b> <br>
+      Answer: “My job is to provide healthcare IT solutions. It helps people gradually access and use applications and machines effectively instead of traditional methods. That helps break down physical barriers and lead us to a more civilized and modern society.”
+    </p>
   </div>
 
 
